--- a/lms/templates/auth/500.html
+++ b/lms/templates/auth/500.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'auth/base.html' %}
 {% block title %}500 Error{% endblock%}
 {% block content %}
 <!-- Page Content -->
@@ -24,7 +24,7 @@
                 <p class="mb-5 lead px-4 px-md-0">Oops! Sorry, something went wrong . The server encountered an error
                     and could not complete your request.
                 </p>
-                <a href="../index-2.html" class="btn btn-primary me-2">Back to Safety</a>
+                <a href="{{ url_for('home.home_page')}}l" class="btn btn-primary me-2">Back to Safety</a>
             </div>
             <!-- img -->
             <div class="offset-xl-1 col-xl-6 col-lg-6 col-md-12 col-12 mt-8 mt-lg-0">
