--- a/lms/templates/auth/admin-sign-in.html
+++ b/lms/templates/auth/admin-sign-in.html
@@ -10,7 +10,7 @@
           <!-- Card body -->
           <div class="card-body p-6">
             <div class="mb-4">
-              <a href="../index-2.html"><img src="../../assets/images/logo.png" class="mb-4" alt="logo-icon" /></a>
+              <a href="{{ url_for('home.home_page')}}"><img src="../../assets/images/logo.png" class="mb-4" alt="logo-icon" /></a>
               <h1 class="mb-1 fw-bold">Admin Login</h1>
             </div>
             <!-- Form -->
