--- a/lms/templates/librarian/base.html
+++ b/lms/templates/librarian/base.html
@@ -67,7 +67,7 @@
         <nav class="navbar-vertical navbar">
             <div class="vh-100" data-simplebar>
                 <!-- Brand logo -->
-                <a id="nav-img" class="navbar-brand" href="#">
+                <a id="nav-img" class="navbar-brand" href="{{ url_for('home.home_page')}}">
                     <img src="../../assets/images/logo.png" alt="">
                 </a>
                 <!-- Navbar nav -->
