ref: added current user to home page

--- a/lms/templates/home.html
+++ b/lms/templates/home.html
@@ -10,7 +10,7 @@
                         Management System
                     </h1>
                     <p class="text-white-50 mb-4 lead">
-                        Built for the Faculty of Engineering. Our system is designed to streamline and enhance the overall library
+                        Built for the Faculty of Engineering. The system is designed to streamline and enhance the overall library
                         experience for students, faculty, and staff.
                     </p>
                     <a href="pages/course-filter-list.html" class="btn btn-dark">Browse Books</a>
