ref: updated home page

--- a/lms/templates/home.html
+++ b/lms/templates/home.html
@@ -13,7 +13,7 @@
                         Built for the Faculty of Engineering. The system is designed to streamline and enhance the overall library
                         experience for students, faculty, and staff.
                     </p>
-                    <a href="pages/course-filter-list.html" class="btn btn-dark">Browse Books</a>
+                    <a href="#" class="btn btn-dark">Browse Books</a>
                     <a href="{{ url_for('auth.librarian_sign_in')}}" class="btn btn-white">Are You a Librarian?</a>
                 </div>
             </div>
