ref: modeified book, dashboard pages

--- a/lms/templates/librarian/books.html
+++ b/lms/templates/librarian/books.html
@@ -49,7 +49,7 @@
                         <span class="position-absolute ps-3 search-icon">
                             <i class="fe fe-search"></i>
                         </span>
-                        {{ form.query(class="form-control ps-6", placeholder="Filter Book by isbn number")}}
+                        {{ form.query(class="form-control ps-6", placeholder="Filter Book by title, isbn number")}}
                         {% if form.query.errors %}
                         <ul class="errors">
                             {% for error in form.query.errors %}
