--- a/lms/templates/librarian/students.html
+++ b/lms/templates/librarian/students.html
@@ -50,7 +50,7 @@
                         <span class="position-absolute ps-3 search-icon">
                             <i class="fe fe-search"></i>
                         </span>
-                        {{ form.query(class="form-control ps-6", placeholder="Filter Book by student by matric number")}}
+                        {{ form.query(class="form-control ps-6", placeholder="Filter student by matric number")}}
                         {% if form.query.errors %}
                         <ul class="errors">
                             {% for error in form.query.errors %}
