--- a/lms/templates/librarian/dashboard.html
+++ b/lms/templates/librarian/dashboard.html
@@ -171,6 +171,95 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-xl-6 col-lg-12 col-md-12 col-12 mb-4">
+            <!-- Card -->
+            <div class="card h-100">
+                <!-- Card header -->
+                <div class="card-header d-flex align-items-center
+                        justify-content-between card-header-height">
+                    <h4 class="mb-0">Recently added books</h4>
+                    <a href="{{ url_for('librarian.books')}}" class="btn btn-outline-secondary btn-sm">View all</a>
+                </div>
+                <!-- Card body -->
+                <div class="card-body">
+                    <!-- List group flush -->
+                    <ul class="list-group list-group-flush">
+
+                        {% for book in book.items %}
+                        <!-- List group -->
+                        <li class="list-group-item px-0">
+                            <div class="row">
+                                <div class="col-auto">
+                                    <a href="#"><img src="{{ url_for('librarian.upload', filename=book.img_upload)}}"
+                                            alt="" class="img-fluid rounded img-4by3-lg"></a>
+                                </div>
+                                <div class="col ps-0">
+                                    <a href="#">
+                                        <h5 class="text-primary-hover txt">
+                                            {{book.title}}
+                                        </h5>
+                                    </a>
+                                    <div class="d-flex align-items-center">
+                                        <img src="../../assets/images/avatar/06.png" alt=""
+                                            class="rounded-circle avatar-xs me-2">
+                                        <span class="fs-6">{{book.author.name}}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xl-6 col-lg-12 col-md-12 col-12 mb-4">
+            <!-- Card -->
+            <div class="card h-100">
+                <!-- Card header -->
+                <div class="card-header d-flex align-items-center
+                        justify-content-between card-header-height">
+                    <h4 class="mb-0">Recently added students</h4>
+                    <a href="{{ url_for('librarian.students')}}" class="btn btn-outline-secondary btn-sm">View all</a>
+                </div>
+                <!-- Card body -->
+                <div class="card-body">
+                    <!-- List group flush -->
+                    <ul class="list-group list-group-flush">
+
+                        {% for student in student.items %}
+                        <!-- List group -->
+                        <li class="list-group-item px-0">
+                            <div class="row">
+                                <div class="col-auto">
+                                    <a href="#"><img id="ph"
+                                            src="{{ url_for('librarian.upload', filename=student.img_upload)}}" alt=""
+                                            class="img-fluid rounded img-4by3-lg "></a>
+                                </div>
+                                <div class="col ps-0">
+                                    <a href="#">
+                                        <h5 class="text-primary-hover txt">
+                                            {{student.name}}
+                                        </h5>
+                                    </a>
+                                    <div class="d-flex align-items-center">
+                                        <img src="../../assets/images/logo.png" alt=""
+                                            class="rounded-circle avatar-xs me-2">
+                                        <span class="fs-6">{{student.matric_no}}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
     <div class="row">
         <div class="col-lg-12 col-md-12 col-12">
             <!-- Card -->
@@ -241,6 +330,7 @@
             </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-lg-12 col-md-12 col-12">
             <!-- Card -->
@@ -249,7 +339,8 @@
                 <div
                     class="card-header d-flex justify-content-between align-items-center border-bottom-0 card-header-height">
                     <h4 class="mb-0">Recent Checkout's</h4>
-                    <a href="{{ url_for('librarian.issued_book')}}" class="btn btn-outline-secondary btn-sm">View all</a>
+                    <a href="{{ url_for('librarian.issued_book')}}" class="btn btn-outline-secondary btn-sm">View
+                        all</a>
                 </div>
                 <!-- Table -->
                 <div class="table-responsive border-0 overflow-y-hidden">
@@ -323,108 +414,6 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-xl-6 col-lg-12 col-md-12 col-12 mb-4">
-            <!-- Card -->
-            <div class="card h-100">
-                <!-- Card header -->
-                <div class="card-header d-flex align-items-center
-                        justify-content-between card-header-height">
-                    <h4 class="mb-0">Recently added books</h4>
-                    <a href="{{ url_for('librarian.books')}}" class="btn btn-outline-secondary btn-sm">View all</a>
-                </div>
-                <!-- Card body -->
-                <div class="card-body">
-                    <!-- List group flush -->
-                    <ul class="list-group list-group-flush">
 
-                        {% for book in book.items %}
-                        <!-- List group -->
-                        <li class="list-group-item px-0">
-                            <div class="row">
-                                <div class="col-auto">
-                                    <a href="#"><img src="{{ url_for('librarian.upload', filename=book.img_upload)}}"
-                                            alt="" class="img-fluid rounded img-4by3-lg"></a>
-                                </div>
-                                <div class="col ps-0">
-                                    <a href="#">
-                                        <h5 class="text-primary-hover txt">
-                                            {{book.title}}
-                                        </h5>
-                                    </a>
-                                    <div class="d-flex align-items-center">
-                                        <img src="../../assets/images/avatar/06.png" alt=""
-                                            class="rounded-circle avatar-xs me-2">
-                                        <span class="fs-6">{{book.author.name}}</span>
-                                    </div>
-                                </div>
-                                <div class="col-auto">
-                                    <span class="dropdown dropstart">
-                                        <a class="btn-icon btn btn-ghost btn-sm rounded-circle" href="#" role="button"
-                                            id="courseDropdown4" data-bs-toggle="dropdown" data-bs-offset="-20,20"
-                                            aria-expanded="false">
-                                            <i class="fe fe-more-vertical"></i>
-                                        </a>
-                                        <span class="dropdown-menu" aria-labelledby="courseDropdown4">
-                                            <span class="dropdown-header">Settings</span>
-                                            <a class="dropdown-item" href="#"><i
-                                                    class="fe fe-edit dropdown-item-icon "></i>Edit</a>
-                                            <a class="dropdown-item" href="#"><i
-                                                    class="fe fe-trash dropdown-item-icon "></i>Remove</a>
-                                        </span>
-                                    </span>
-                                </div>
-                            </div>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-xl-6 col-lg-12 col-md-12 col-12 mb-4">
-            <!-- Card -->
-            <div class="card h-100">
-                <!-- Card header -->
-                <div class="card-header d-flex align-items-center
-                        justify-content-between card-header-height">
-                    <h4 class="mb-0">Recently added students</h4>
-                    <a href="{{ url_for('librarian.students')}}" class="btn btn-outline-secondary btn-sm">View all</a>
-                </div>
-                <!-- Card body -->
-                <div class="card-body">
-                    <!-- List group flush -->
-                    <ul class="list-group list-group-flush">
-
-                        {% for student in student.items %}
-                        <!-- List group -->
-                        <li class="list-group-item px-0">
-                            <div class="row">
-                                <div class="col-auto">
-                                    <a href="#"><img id="ph"
-                                            src="{{ url_for('librarian.upload', filename=student.img_upload)}}" alt=""
-                                            class="img-fluid rounded img-4by3-lg "></a>
-                                </div>
-                                <div class="col ps-0">
-                                    <a href="#">
-                                        <h5 class="text-primary-hover txt">
-                                            {{student.name}}
-                                        </h5>
-                                    </a>
-                                    <div class="d-flex align-items-center">
-                                        <img src="../../assets/images/logo.png" alt=""
-                                            class="rounded-circle avatar-xs me-2">
-                                        <span class="fs-6">{{student.matric_no}}</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-    </div>
 </section>
 {% endblock %}
