--- a/lms/templates/student/base.html
+++ b/lms/templates/student/base.html
@@ -195,7 +195,7 @@
                                     <div class="dropdown-divider"></div>
                                     <ul class="list-unstyled">
                                         <li>
-                                            <a class="dropdown-item" href="../profile-edit.html">
+                                            <a class="dropdown-item" href="{{ url_for('student.profile')}}">
                                                 <i class="fe fe-user me-2"></i> Profile
                                             </a>
                                         </li>
