ref: fixed book issue on librarian page

--- a/lms/templates/librarian/students.html
+++ b/lms/templates/librarian/students.html
@@ -266,7 +266,7 @@
                                                             href="{{ url_for('librarian.edit_student', student_id=student.id) }}"><i
                                                                 class="fe fe-edit dropdown-item-icon"></i>Edit</a>
                                                                 <a class="dropdown-item"
-                                                                href="{{ url_for('librarian.edit_student', student_id=student.id) }}"><i
+                                                                href="{{ url_for('librarian.issue_book') }}"><i
                                                                     class="fe fe-book dropdown-item-icon"></i>Issue Book</a>
                                                                 <a class="dropdown-item"
                                                                 href="{{ url_for('librarian.student_library_card', student_id=student.id) }}"><i
