--- a/lms/templates/home.html
+++ b/lms/templates/home.html
@@ -13,8 +13,8 @@
                         Built for the Faculty of Engineering. The system is designed to streamline and enhance the overall library
                         experience for students, faculty, and staff.
                     </p>
-                    <a href="#" class="btn btn-dark">Browse Books</a>
-                    <a href="{{ url_for('auth.librarian_sign_in')}}" class="btn btn-white">Are You a Librarian?</a>
+                    <a href="{{ url_for('auth.librarian_sign_in')}}" class="btn btn-dark">Login as Librarian</a>
+                    <a href="{{ url_for('auth.student_sign_in')}}" class="btn btn-white">Login as Student</a>
                 </div>
             </div>
             <div class=" col-xl-7 col-lg-6 col-md-12 text-lg-end text-center">
