--- a/lms/templates/librarian/base.html
+++ b/lms/templates/librarian/base.html
@@ -136,7 +136,7 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link " href=" {{ url_for('librarian.issued_book')}}">
+                        <a class="nav-link " href=" {{ url_for('librarian.transaction')}}">
                             <i class="nav-icon fe fe-file me-2"></i>View Transactions
                         </a>
                     </li>
