--- a/lms/templates/student/dashboard.html
+++ b/lms/templates/student/dashboard.html
@@ -183,7 +183,7 @@
                 <div class="card-header d-flex align-items-center
                         justify-content-between card-header-height">
                     <h4 class="mb-0">Transactions</h4>
-                    <a href="#" class="btn btn-outline-secondary btn-sm">See all</a>
+                    <a href="{{ url_for('student.transaction') }}" class="btn btn-outline-secondary btn-sm">See all</a>
                 </div>
                 <!-- Card body -->
                 <div class="card-body">
