--- a/lms/templates/student/single_book.html
+++ b/lms/templates/student/single_book.html
@@ -36,7 +36,7 @@
                                 <a href="{{ url_for('librarian.upload', filename=book.img_upload)}}" class="glightboxGallery"
                                     data-gallery="gallery1">
                                     <img src="{{ url_for('librarian.upload', filename=book.img_upload)}}" alt="image"
-                                        class="img-fluid rounded-3 w-100">
+                                        class="img-fluid rounded-3 w-100 single_book">
                                 </a>
                             </div>
                         </div>
