--- a/lms/templates/student/single_book.html
+++ b/lms/templates/student/single_book.html
@@ -20,7 +20,6 @@
                         </ol>
                     </nav>
                 </div>
-
             </div>
 
         </div>
@@ -33,8 +32,8 @@
                         <div class="col-12">
                             <div class="mb-4">
                                 <!-- Gallery -->
-                                <a href="{{ url_for('librarian.upload', filename=book.img_upload)}}" class="glightboxGallery"
-                                    data-gallery="gallery1">
+                                <a href="{{ url_for('librarian.upload', filename=book.img_upload)}}"
+                                    class="glightboxGallery" data-gallery="gallery1">
                                     <img src="{{ url_for('librarian.upload', filename=book.img_upload)}}" alt="image"
                                         class="img-fluid rounded-3 w-100 single_book">
                                 </a>
@@ -62,8 +61,8 @@
                             <div class="col-md-6">
                                 <div class="d-grid mb-2 mb-md-0">
                                     <!-- btn -->
-                                    <a href="{{ url_for('student.issue_book', book_id=book.id)}}" class="btn btn-danger"><i
-                                            class="fe fe-edit me-2"></i>Issue Book</a>
+                                    <a href="{{ url_for('student.issue_book', book_id=book.id)}}"
+                                        class="btn btn-danger"><i class="fe fe-edit me-2"></i>Issue Book</a>
                                 </div>
                             </div>
                             <!-- col -->
@@ -71,8 +70,8 @@
 
                                 <div class="d-grid">
                                     <!-- btn -->
-                                    <a href="{{ url_for('student.reserve_book', book_id=book.id)}}" class="btn btn-outline-secondary"><i
-                                            class="fe fe-heart me-2"></i>Reserve</a>
+                                    <a href="{{ url_for('student.reserve_book', book_id=book.id)}}"
+                                        class="btn btn-outline-secondary"><i class="fe fe-heart me-2"></i>Reserve</a>
                                 </div>
                             </div>
                         </div>
