--- a/lms/templates/librarian/reserve.html
+++ b/lms/templates/librarian/reserve.html
@@ -45,7 +45,7 @@
                         <span class="position-absolute ps-3 search-icon">
                             <i class="fe fe-search"></i>
                         </span>
-                        {{ form.query(class="form-control ps-6", placeholder="Filter by reservation status, reservation_date")}}
+                        {{ form.query(class="form-control ps-6", placeholder="Filter reserved book by date")}}
                         {% if form.query.errors %}
                         <ul class="errors">
                             {% for error in form.query.errors %}
